# hedge-fund

./: ARCHITECTURE.en.md  ARCHITECTURE.md  README.md  calibr_data.parquet описание.txt  market_data.parquet описание.txt  pyproject.toml  requirements.txt  solution.ipynb
artifacts/calibration/: calibr_data.parquet  heston_benchmarks.json  heston_stability.json
artifacts/logs/: cryptohedge.jsonl
artifacts/results/: dashboard_en.html  dashboard_ru.html  diagnostic.json  explanation.en.md  explanation.md  hedge_decisions.parquet  hedging_history.parquet  optimization_weights.parquet  performance_metrics.json  portfolio_constituents.parquet  portfolio_methods.parquet  portfolio_weights_path.parquet  stress_test.parquet  walkforward.parquet
config/: data.yaml  diagnostics.yaml  market.yaml  portfolio.yaml  system.yaml
cryptohedge/: __init__.py  cli.py
cryptohedge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cryptohedge/agents/: __init__.py  backtesting.py  dashboard.py  data_acquisition.py  explainability.py  greeks_calculation.py  hedging_decision.py  heston_calibration.py  market_analysis.py  portfolio_optimization.py  risk_management.py  self_diagnostic.py
cryptohedge/core/: __init__.py  agent.py  bus.py  checkpoint.py  config.py  context.py  logging.py  message.py  orchestrator.py  seeding.py
cryptohedge/domain/: __init__.py  decisions.py  greeks.py  market.py  (+1 more)
pyquant/: __init__.py
scripts/: build_presentations.py  generate_data.py
tests/: conftest.py  test_core.py  test_integration.py  test_quant_services.py
(+73 files in other folders)
